--- a/src/views/manageMovies/manageMovies.css
+++ b/src/views/manageMovies/manageMovies.css
@@ -56,12 +56,13 @@
 }
 
 .count-page{
-    margin-top: 3vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
     width:100%;
     gap:8px;
+    bottom: 12px;
+    position: absolute;
 }
 
 .column-item{
