--- a/src/views/manageMovies/components/modal-add-movies/modal-add-movies.css
+++ b/src/views/manageMovies/components/modal-add-movies/modal-add-movies.css
@@ -102,3 +102,19 @@ input[type="file"] {
     border: 2px solid var(--primary-dark, #169C8A);
     box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.02);
 }
+.imgReport{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80px;
+    height: 80px;
+    border-radius: 16px;
+    border: 2px solid var(--neutral-lighter, #EBEBEB);
+    object-fit: contain;
+}
+
+.imgReport:hover{
+    border: 2px solid var(--primary-dark, #169C8A);
+    box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.02);
+    cursor: pointer;
+}
