--- a/src/views/manageTicket/components/modal-detail-ticket/modal-detail-ticket.css
+++ b/src/views/manageTicket/components/modal-detail-ticket/modal-detail-ticket.css
@@ -1,5 +1,77 @@
 .modal-content {
     border-radius: 16px;
-    min-height: 300px;
+    min-height: 650px;
 }
 
+#movie-image-modal{
+    height: 80%;
+    object-fit: contain;
+    border: 10px solid #b56161;
+}
+
+.custom-select {
+    width: 100%;
+    height: 35px;
+    outline: 1px solid #ced4da;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+    border-radius: 0.375rem;
+    cursor: pointer;
+    position: relative;
+    font-size: 15px;
+}
+
+.custom-select:focus {
+    border-color: rgb(254, 220, 134);
+}
+
+.custom-select p, .custom-select i {
+    line-height: 100%;
+    user-select: none;
+}
+
+.genre-modal {
+    position: absolute;
+    top: calc(100% + 8px);
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 0.375rem;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 10px 0px;
+}
+
+.genre-modal .genre-item-container {
+    padding: 10px 20px;
+    line-height: 100%;
+    transition: all 0.3s ease-in-out;
+}
+
+.genre-modal .genre-item-container:hover {
+    background-color: #712f06;
+    color: #fff;
+}
+
+.genre-item-container label {
+    width: fit-content;
+}
+
+.genre-item-container input[type="checkbox"] {
+    width: 10%;
+}
+
+.text-fill-all {
+    color: #f86a6a;
+    font-size: 14px;
+    display: none;
+}
+
+.genre-item-container {
+    display: flex !important;
+    justify-content: space-between !important;
+}
